--- a/core/tools/pkg/debian/index.html
+++ b/core/tools/pkg/debian/index.html
@@ -1818,7 +1818,7 @@ tr.twikiDiffDebug .twikiDiffUnchangedText {
   <li><a href="LICENSE">LICENSE</a></li>
   <li><a href="INSTALL.html">Installation Guide</a></li>
   <li><a href="bin/configure">Configure TWiki</a></li>
-  <li><a href="TWikiUpgradeGuide.html">TWiki Upgrade Guide</a></li>
+  <li><a href="UpgradeGuide.html">Upgrade Guide</a></li>
   <li><a href="ReleaseNotes01x00.html">TWiki-4.2 Release Notes</a></li>
  </ul>
  <p><strong>Note:</strong> These pages do not need to be accessible by browsers. Preventing access will increase security and will not affect TWiki in any way.</p>
