Item273: rename twiki.tmpl -> foswiki.tmpl
git-svn-id: http://svn.foswiki.org/trunk@906 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/index.html
+++ b/core/index.html
@@ -228,7 +228,7 @@ pre {
 html>body pre { /* hide from IE */
 	/*\*/ overflow:auto !important; /* */ overflow:scroll; width:auto; /* for Mac Safari */
 }
-/* IE behavior for pre is defined in twiki.pattern.tmpl in conditional comment */
+/* IE behavior for pre is defined in foswiki.pattern.tmpl in conditional comment */
 ol li, ul li {
 	line-height:1.4em; /*S1*/
 }
