--- a/core/tools/pkg/debian/index.html
+++ b/core/tools/pkg/debian/index.html
@@ -228,7 +228,7 @@ pre {
 html>body pre { /* hide from IE */
 	/*\*/ overflow:auto !important; /* */ overflow:scroll; width:auto; /* for Mac Safari */
 }
-/* IE behavior for pre is defined in twiki.pattern.tmpl in conditional comment */
+/* IE behavior for pre is defined in foswiki.pattern.tmpl in conditional comment */
 ol li, ul li {
 	line-height:1.4em; /*S1*/
 }
