Item6041: fix empty bullet list Item324: get it working on Foswiki Item295: further detoxing
git-svn-id: http://svn.foswiki.org/trunk@1043 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/colours.htm
+++ b/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/colours.htm
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-	<title>{$lang_twikibuttons_colours_dlg_title}</title>
+	<title>{$lang_foswikibuttons_colours_dlg_title}</title>
 	<script language="javascript" type="text/javascript" src="../../tiny_mce_popup.js"></script>
 	<script language="javascript" type="text/javascript" src="../../utils/mctabs.js"></script>
 	<script language="javascript" type="text/javascript" src="../../utils/form_utils.js"></script>
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/popup.css" />
 	<base target="_self" />
   </head>
-    <body onload="tinyMCEPopup.executeOnLoad('init();');" id="twikibuttonscolours" style="display: none">
+    <body onload="tinyMCEPopup.executeOnLoad('init();');" id="foswikibuttonscolours" style="display: none">
       <div class="panel_wrapper">
         <div id="general_panel" class="panel current">
           <table class="colours">
@@ -38,7 +38,7 @@
               <td class="colours" style="background-color:midnightblue">
                 <input title="midnightblue" class="colours" style="background-color:midnightblue" type="button" value="&nbsp;" onclick="setColour('midnightblue')" />
               </td>
-              <td class="twikicolours" style="background-color:navy">
+              <td class="foswikicolours" style="background-color:navy">
                 <input title="%NAVY%" class="colours" style="background-color:navy" type="button" value="&nbsp;" onclick="setColour('navy')" />
               </td>
               <td class="colours" style="background-color:darkblue">
@@ -49,7 +49,7 @@
               </td>
             </tr>
             <tr>
-              <td class="twikicolours" style="background-color:blue">
+              <td class="foswikicolours" style="background-color:blue">
                 <input title="%BLUE%" class="colours" style="background-color:blue" type="button" value="&nbsp;" onclick="setColour('blue')" />
               </td>
               <td class="colours" style="background-color:dodgerblue">
@@ -90,7 +90,7 @@
               <td class="colours" style="background-color:darkcyan">
                 <input title="darkcyan" class="colours" style="background-color:darkcyan" type="button" value="&nbsp;" onclick="setColour('darkcyan')" />
               </td>
-              <td class="twikicolours" style="background-color:teal">
+              <td class="foswikicolours" style="background-color:teal">
                 <input title="%TEAL%" class="colours" style="background-color:teal" type="button" value="&nbsp;" onclick="setColour('teal')" />
               </td>
               <td class="colours" style="background-color:cadetblue">
@@ -102,7 +102,7 @@
               <td class="colours" style="background-color:aqua">
                 <input title="aqua" class="colours" style="background-color:aqua" type="button" value="&nbsp;" onclick="setColour('aqua')" />
               </td>
-              <td class="twikicolours" style="background-color:cyan">
+              <td class="foswikicolours" style="background-color:cyan">
                 <input title="%AQUA%" class="colours" style="background-color:cyan" type="button" value="&nbsp;" onclick="setColour('cyan')" />
               </td>
               <td class="colours" style="background-color:turquoise">
@@ -128,7 +128,7 @@
               <td class="colours" style="background-color:darkgreen">
                 <input title="darkgreen" class="colours" style="background-color:darkgreen" type="button" value="&nbsp;" onclick="setColour('darkgreen')" />
               </td>
-              <td class="twikicolours" style="background-color:green">
+              <td class="foswikicolours" style="background-color:green">
                 <input title="%GREEN%" class="colours" style="background-color:green" type="button" value="&nbsp;" onclick="setColour('green')" />
               </td>
               <td class="colours" style="background-color:forestgreen">
@@ -137,7 +137,7 @@
               <td class="colours" style="background-color:limegreen">
                 <input title="limegreen" class="colours" style="background-color:limegreen" type="button" value="&nbsp;" onclick="setColour('limegreen')" />
               </td>
-              <td class="twikicolours" style="background-color:lime">
+              <td class="foswikicolours" style="background-color:lime">
                 <input title="%LIME%" class="colours" style="background-color:lime" type="button" value="&nbsp;" onclick="setColour('lime')" />
               </td>
               <td class="colours" style="background-color:chartreuse">
@@ -172,7 +172,7 @@
               <td class="colours" style="background-color:olivedrab">
                 <input title="olivedrab" class="colours" style="background-color:olivedrab" type="button" value="&nbsp;" onclick="setColour('olivedrab')" />
               </td>
-              <td class="twikicolours" style="background-color:olive">
+              <td class="foswikicolours" style="background-color:olive">
                 <input title="%OLIVE%" class="colours" style="background-color:olive" type="button" value="&nbsp;" onclick="setColour('olive')" />
               </td>
               <td class="colours" style="background-color:darkkhaki">
@@ -189,7 +189,7 @@
               </td>
             </tr>
             <tr>
-              <td class="twikicolours" style="background-color:yellow">
+              <td class="foswikicolours" style="background-color:yellow">
                 <input title="%YELLOW%" class="colours" style="background-color:yellow" type="button" value="&nbsp;" onclick="setColour('yellow')" />
               </td>
               <td class="colours" style="background-color:khaki">
@@ -239,10 +239,10 @@
               <td class="colours" style="background-color:darkred">
                 <input title="darkred" class="colours" style="background-color:darkred" type="button" value="&nbsp;" onclick="setColour('darkred')" />
               </td>
-              <td class="twikicolours" style="background-color:maroon">
+              <td class="foswikicolours" style="background-color:maroon">
                 <input title="%MAROON%" class="colours" style="background-color:maroon" type="button" value="&nbsp;" onclick="setColour('maroon')" />
               </td>
-              <td class="twikicolours" style="background-color:brown">
+              <td class="foswikicolours" style="background-color:brown">
                 <input title="%BROWN%" class="colours" style="background-color:brown" type="button" value="&nbsp;" onclick="setColour('brown')" />
               </td>
               <td class="colours" style="background-color:firebrick">
@@ -274,7 +274,7 @@
               <td class="colours" style="background-color:darkorange">
                 <input title="darkorange" class="colours" style="background-color:darkorange" type="button" value="&nbsp;" onclick="setColour('darkorange')" />
               </td>
-              <td class="twikicolours" style="background-color:orange">
+              <td class="foswikicolours" style="background-color:orange">
                 <input title="%ORANGE%" class="colours" style="background-color:orange" type="button" value="&nbsp;" onclick="setColour('orange')" />
               </td>
               <td class="colours" style="background-color:orangered">
@@ -283,13 +283,13 @@
               <td class="colours" style="background-color:crimson">
                 <input title="crimson" class="colours" style="background-color:crimson" type="button" value="&nbsp;" onclick="setColour('crimson')" />
               </td>
-              <td class="twikicolours" style="background-color:red">
+              <td class="foswikicolours" style="background-color:red">
                 <input title="%RED%" class="colours" style="background-color:red" type="button" value="&nbsp;" onclick="setColour('red')" />
               </td>
               <td class="colours" style="background-color:deeppink">
                 <input title="deeppink" class="colours" style="background-color:deeppink" type="button" value="&nbsp;" onclick="setColour('deeppink')" />
               </td>
-              <td class="twikicolours" style="background-color:fuchsia">
+              <td class="foswikicolours" style="background-color:fuchsia">
                 <input title="%PINK%" class="colours" style="background-color:fuchsia" type="button" value="&nbsp;" onclick="setColour('fuchsia')" />
               </td>
             </tr>
@@ -312,7 +312,7 @@
               <td class="colours" style="background-color:mediumvioletred">
                 <input title="mediumvioletred" class="colours" style="background-color:mediumvioletred" type="button" value="&nbsp;" onclick="setColour('mediumvioletred')" />
               </td>
-              <td class="twikicolours" style="background-color:purple">
+              <td class="foswikicolours" style="background-color:purple">
                 <input title="%PURPLE%" class="colours" style="background-color:purple" type="button" value="&nbsp;" onclick="setColour('purple')" />
               </td>
               <td class="colours" style="background-color:darkmagenta">
@@ -420,7 +420,7 @@
               <td class="colours" style="background-color:snow">
                 <input title="snow" class="colours" style="background-color:snow" type="button" value="&nbsp;" onclick="setColour('snow')" />
               </td>
-              <td class="twikicolours" style="background-color:white">
+              <td class="foswikicolours" style="background-color:white">
                 <input title="%WHITE%" class="colours" style="background-color:white" type="button" value="&nbsp;" onclick="setColour('white')" />
               </td>
               <td class="colours" style="background-color:whitesmoke">
@@ -434,13 +434,13 @@
               </td>
             </tr>
             <tr>
-              <td class="twikicolours" style="background-color:silver">
+              <td class="foswikicolours" style="background-color:silver">
                 <input title="%SILVER%" class="colours" style="background-color:silver" type="button" value="&nbsp;" onclick="setColour('silver')" />
               </td>
               <td class="colours" style="background-color:darkgray">
                 <input title="darkgray" class="colours" style="background-color:darkgray" type="button" value="&nbsp;" onclick="setColour('darkgray')" />
               </td>
-              <td class="twikicolours" style="background-color:gray">
+              <td class="foswikicolours" style="background-color:gray">
                 <input title="%GRAY%" class="colours" style="background-color:gray" type="button" value="&nbsp;" onclick="setColour('gray')" />
               </td>
               <td class="colours" style="background-color:lightslategray">
@@ -455,7 +455,7 @@
               <td class="colours" style="background-color:darkslategray">
                 <input title="darkslategray" class="colours" style="background-color:darkslategray" type="button" value="&nbsp;" onclick="setColour('darkslategray')" />
               </td>
-              <td class="twikicolours" style="background-color:black">
+              <td class="foswikicolours" style="background-color:black">
                 <input title="%BLACK%" class="colours" style="background-color:black" type="button" value="&nbsp;" onclick="setColour('black')" />
               </td>
             </tr>
