Item113: more css classes
git-svn-id: http://svn.foswiki.org/trunk@1178 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/index.html
+++ b/core/index.html
@@ -169,7 +169,7 @@ outside the parent container. */
 	display:none;
 }
 .foswikiLast,
-.patternTopic .foswikiLast {
+.foswikiTopic .foswikiLast {
 	border-bottom:0px;
 }
 
@@ -471,15 +471,15 @@ th.foswikiSortedDescendingCol a:hover font {
 .tipsOfTheDayContents .tipsOfTheDayTitle {
 	font-weight:bold;
 }
-.patternTopic .tipsOfTheDayHeader {
+.foswikiTopic .tipsOfTheDayHeader {
 	display:block;
 	padding:3px 5px;
 }
-.patternTopic .tipsOfTheDayText {
+.foswikiTopic .tipsOfTheDayText {
 	padding:0 5px 5px 5px;
 }
-.patternTopic .tipsOfTheDayText a:link,
-.patternTopic .tipsOfTheDayText a:visited {
+.foswikiTopic .tipsOfTheDayText a:link,
+.foswikiTopic .tipsOfTheDayText a:visited {
 	text-decoration:none;
 }
 /* TipsContrib - in left bar */
@@ -734,7 +734,7 @@ a.foswikiLinkInHeaderRight {
 	Pattern skin specific elements
 	-----------------------------------------------------------	*/
 
-.patternTopic {
+.foswikiTopic {
 	margin:1em 0 2em 0;
 }
 #patternSideBarContents {
@@ -1302,10 +1302,10 @@ h3, h4, h5, h6 {
 	background:#fff; /*BG1*/
 }
 
-.patternTopic a:visited {
+.foswikiTopic a:visited {
 	color:#666; /*T7*/
 }
-.patternTopic a:hover {
+.foswikiTopic a:hover {
 	color:#FBF7E8; /*C3*/
 }
 
@@ -1357,8 +1357,8 @@ select {
 }
 
 /* TablePlugin - sorting of table columns */
-.patternTopic th.foswikiSortedAscendingCol,
-.patternTopic th.foswikiSortedDescendingCol {
+.foswikiTopic th.foswikiSortedAscendingCol,
+.foswikiTopic th.foswikiSortedDescendingCol {
 	background-color:#ccc; /*BG8*/
 }
 th.foswikiSortedAscendingCol a:link,
@@ -1390,7 +1390,7 @@ a:hover.twistyTrigger {
 .tipsOfTheDay {
 	background-color:#ECF4FB; /*BG5*/
 }
-.patternTopic .tipsOfTheDayHeader {
+.foswikiTopic .tipsOfTheDayHeader {
 	color:#333; /*T11*/
 }
 /* TipsContrib - in left bar */
@@ -1812,7 +1812,7 @@ tr.foswikiDiffDebug .foswikiDiffUnchangedText {
 }
 </style>
 </head>
-<body class="patternNoViewPage"><div id="patternScreen"><div id="patternPageShadow"><div id="patternPage"><div id="patternOuter"><div id="patternFloatWrap"><div id="patternMain"><div id="patternMainContents"><div class="patternContent"><div class="patternTopic">
+<body class="patternNoViewPage"><div id="patternScreen"><div id="patternPageShadow"><div id="patternPage"><div id="patternOuter"><div id="patternFloatWrap"><div id="patternMain"><div id="patternMainContents"><div class="patternContent"><div class="foswikiTopic">
  <h1>Welcome to Foswiki</h1>
  <ul>
   <li><a href="readme.txt">README</a></li>
@@ -1823,7 +1823,7 @@ tr.foswikiDiffDebug .foswikiDiffUnchangedText {
   <li><a href="ReleaseNotes01x00.html">Foswiki-1.0 Release Notes</a></li>
  </ul>
  <p><strong>Note:</strong> These pages do not need to be accessible by browsers. Preventing access will increase security and will not affect Foswiki in any way.</p>
- </div><!--/patternTopic--></div><!--/patternContent--></div><!--/patternMainContents--></div><!--/patternMain-->
+ </div><!--/foswikiTopic--></div><!--/patternContent--></div><!--/patternMainContents--></div><!--/patternMain-->
 </div><!--/patternFloatWrap--><div class="clear">&nbsp;</div>
 </div><!--/patternOuter--></div><!--/patternPage--></div><!--/patternPageShadow--></div><!--/patternScreen-->
 </body>
