--- a/core/tools/pkg/debian/index.html
+++ b/core/tools/pkg/debian/index.html
@@ -168,7 +168,7 @@ outside the parent container. */
 	display:none;
 }
 .twikiLast,
-.patternTopic .twikiLast {
+.foswikiTopic .twikiLast {
 	border-bottom:0px;
 }
 
@@ -330,7 +330,7 @@ select option {
 	padding:1px;
 }
 .twikiSubmit,
-.twikiButton,
+.foswikiButton,
 .twikiCheckbox {
 	border-width:1px;
 	border-style:solid;
@@ -340,7 +340,7 @@ select option {
 	vertical-align:middle;
 }
 .twikiCheckbox,
-.twikiRadioButton {
+.foswikiRadioButton {
 	margin:0 .3em 0 0;
 	border:0;
 }
@@ -470,15 +470,15 @@ th.twikiSortedDescendingCol a:hover font {
 .tipsOfTheDayContents .tipsOfTheDayTitle {
 	font-weight:bold;
 }
-.patternTopic .tipsOfTheDayHeader {
+.foswikiTopic .tipsOfTheDayHeader {
 	display:block;
 	padding:3px 5px;
 }
-.patternTopic .tipsOfTheDayText {
+.foswikiTopic .tipsOfTheDayText {
 	padding:0 5px 5px 5px;
 }
-.patternTopic .tipsOfTheDayText a:link,
-.patternTopic .tipsOfTheDayText a:visited {
+.foswikiTopic .tipsOfTheDayText a:link,
+.foswikiTopic .tipsOfTheDayText a:visited {
 	text-decoration:none;
 }
 /* TipsContrib - in left bar */
@@ -733,7 +733,7 @@ a.twikiLinkInHeaderRight {
 	Pattern skin specific elements
 	-----------------------------------------------------------	*/
 
-.patternTopic {
+.foswikiTopic {
 	margin:1em 0 2em 0;
 }
 #patternSideBarContents {
@@ -1062,8 +1062,8 @@ table.patternDiffOptions img {
 	margin:.5em 0;
 	float:right;
 }
-.twikiChangeFormButton .twikiButton,
-.twikiChangeFormButtonHolder .twikiButton {
+.twikiChangeFormButton .foswikiButton,
+.twikiChangeFormButtonHolder .foswikiButton {
 	padding:0em;
 	margin:0em;
 	border:none;
@@ -1301,10 +1301,10 @@ h3, h4, h5, h6 {
 	background:#fff; /*BG1*/
 }
 
-.patternTopic a:visited {
+.foswikiTopic a:visited {
 	color:#666; /*T7*/
 }
-.patternTopic a:hover {
+.foswikiTopic a:hover {
 	color:#FBF7E8; /*C3*/
 }
 
@@ -1316,13 +1316,13 @@ select {
 	border-color:#aaa; /*BO6*/
 }
 .twikiSubmit,
-.twikiButton {
+.foswikiButton {
 	border-color:#ddd #aaa #aaa #ddd;
 	color:#333;
 	background-color:#fff; /*BG1*/
 }
 .twikiSubmit:active,
-.twikiButton:active {
+.foswikiButton:active {
 	border-color:#999 #ccc #ccc #999;
 	color:#000;
 }
@@ -1356,8 +1356,8 @@ select {
 }
 
 /* TablePlugin - sorting of table columns */
-.patternTopic th.twikiSortedAscendingCol,
-.patternTopic th.twikiSortedDescendingCol {
+.foswikiTopic th.twikiSortedAscendingCol,
+.foswikiTopic th.twikiSortedDescendingCol {
 	background-color:#ccc; /*BG8*/
 }
 th.twikiSortedAscendingCol a:link,
@@ -1389,7 +1389,7 @@ a:hover.twistyTrigger {
 .tipsOfTheDay {
 	background-color:#ECF4FB; /*BG5*/
 }
-.patternTopic .tipsOfTheDayHeader {
+.foswikiTopic .tipsOfTheDayHeader {
 	color:#333; /*T11*/
 }
 /* TipsContrib - in left bar */
@@ -1737,8 +1737,8 @@ table.patternDiffOptions img {
 .patternEditPage textarea#topic {
 	background-color:#fff; /*BG1*/
 }
-.twikiChangeFormButton .twikiButton,
-.twikiChangeFormButtonHolder .twikiButton {
+.twikiChangeFormButton .foswikiButton,
+.twikiChangeFormButtonHolder .foswikiButton {
 	color:#06c; /*T2*/
 	background:none;
 }
@@ -1811,7 +1811,7 @@ tr.twikiDiffDebug .twikiDiffUnchangedText {
 }
 </style>
 </head>
-<body class="patternNoViewPage"><div id="patternScreen"><div id="patternPageShadow"><div id="patternPage"><div id="patternOuter"><div id="patternFloatWrap"><div id="patternMain"><div id="patternMainContents"><div class="patternContent"><div class="patternTopic">
+<body class="patternNoViewPage"><div id="patternScreen"><div id="patternPageShadow"><div id="patternPage"><div id="patternOuter"><div id="patternFloatWrap"><div id="patternMain"><div id="patternMainContents"><div class="patternContent"><div class="foswikiTopic">
  <h1>Welcome to TWiki</h1>
  <ul>
   <li><a href="readme.txt">README</a></li>
@@ -1822,7 +1822,7 @@ tr.twikiDiffDebug .twikiDiffUnchangedText {
   <li><a href="ReleaseNotes01x00.html">TWiki-4.2 Release Notes</a></li>
  </ul>
  <p><strong>Note:</strong> These pages do not need to be accessible by browsers. Preventing access will increase security and will not affect TWiki in any way.</p>
- </div><!--/patternTopic--></div><!--/patternContent--></div><!--/patternMainContents--></div><!--/patternMain-->
+ </div><!--/foswikiTopic--></div><!--/patternContent--></div><!--/patternMainContents--></div><!--/patternMain-->
 </div><!--/patternFloatWrap--><div class="clear">&nbsp;</div>
 </div><!--/patternOuter--></div><!--/patternPage--></div><!--/patternPageShadow--></div><!--/patternScreen-->
 </body>
