Item694: rebrand core debian package definitions
git-svn-id: http://svn.foswiki.org/trunk@1852 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/index.html
+++ b/core/tools/pkg/debian/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
 <head>
- <title>Welcome to TWiki - A Web-based Collaboration Platform</title>
+ <title>Welcome to Foswiki - A Web-based Collaboration Platform</title>
  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
  <style type="text/css">
 
@@ -15,7 +15,7 @@ Parts of these notes are
 (c) Big John @ www.positioniseverything.net and (c) Paul O'Brien @ www.pmob.co.uk, all of whom contributed significantly to the design of
 the css and html code.
 
-Reworked for TWiki: (c) Arthur Clemens @ visiblearea.com
+Reworked for Foswiki: (c) Arthur Clemens @ visiblearea.com
 */
 
 html, body {
@@ -507,7 +507,7 @@ a:visited .twistyLinkLabel {
 }
 
 /*	-----------------------------------------------------------
-	TWiki styles
+	Foswiki styles
 	-----------------------------------------------------------	*/
 
 #foswikiLogin {
@@ -1384,7 +1384,7 @@ a:hover.twistyTrigger {
 }
 
 /*	-----------------------------------------------------------
-	TWiki styles
+	Foswiki styles
 	-----------------------------------------------------------	*/
 
 .foswikiGrayText {
@@ -1788,16 +1788,16 @@ tr.foswikiDiffDebug .foswikiDiffUnchangedText {
 </style>
 </head>
 <body class="patternNoViewPage"><div id="patternScreen"><div id="patternPageShadow"><div id="patternPage"><div id="patternOuter"><div id="patternFloatWrap"><div id="patternMain"><div id="patternMainContents"><div class="patternContent"><div class="foswikiTopic">
- <h1>Welcome to TWiki</h1>
+ <h1>Welcome to Foswiki</h1>
  <ul>
   <li><a href="readme.txt">README</a></li>
   <li><a href="LICENSE">LICENSE</a></li>
   <li><a href="INSTALL.html">Installation Guide</a></li>
-  <li><a href="bin/configure">Configure TWiki</a></li>
+  <li><a href="bin/configure">Configure Foswiki</a></li>
   <li><a href="UpgradeGuide.html">Upgrade Guide</a></li>
-  <li><a href="ReleaseNotes01x00.html">TWiki-4.2 Release Notes</a></li>
+  <li><a href="ReleaseNotes01x00.html">Foswiki-4.2 Release Notes</a></li>
  </ul>
- <p><strong>Note:</strong> These pages do not need to be accessible by browsers. Preventing access will increase security and will not affect TWiki in any way.</p>
+ <p><strong>Note:</strong> These pages do not need to be accessible by browsers. Preventing access will increase security and will not affect Foswiki in any way.</p>
  </div><!--/foswikiTopic--></div><!--/patternContent--></div><!--/patternMainContents--></div><!--/patternMain-->
 </div><!--/patternFloatWrap--><div class="clear">&nbsp;</div>
 </div><!--/patternOuter--></div><!--/patternPage--></div><!--/patternPageShadow--></div><!--/patternScreen-->
